--- a/public/css/main.css
+++ b/public/css/main.css
@@ -26,7 +26,7 @@ form {
 .main-header {
   width: 100%;
   height: 3.5rem;
-  background-color: red;
+  background-color: rgb(19, 0, 105);
   padding: 0 1.5rem;
   display: flex;
   align-items: center;
@@ -102,7 +102,7 @@ form {
 .mobile-nav__item a:active,
 .mobile-nav__item a:hover,
 .mobile-nav__item a.active {
-  background: red;
+  background: rgb(19, 0, 105);
   color: white;
   border-radius: 3px;
 }
@@ -184,8 +184,8 @@ form {
   padding: 0.25rem 1rem;
   text-decoration: none;
   font: inherit;
-  border: 1px solid red;
-  color: red;
+  border: 1px solid rgb(19, 0, 105);
+  color: rgb(19, 0, 105);
   background: white;
   border-radius: 3px;
   cursor: pointer;
@@ -193,7 +193,7 @@ form {
 
 .btn:hover,
 .btn:active {
-  background-color: red;
+  background-color: rgb(19, 0, 105);
   color: white;
 }
 
