--- a/public/css/main.css
+++ b/public/css/main.css
@@ -23,10 +23,18 @@ form {
   text-align: center;
 }
 
+.image {
+  height: 20rem;
+}
+
+.image img {
+  height: 100%;
+}
+
 .main-header {
   width: 100%;
   height: 3.5rem;
-  background-color: rgb(19, 0, 105);
+  background-color: #00695c;
   padding: 0 1.5rem;
   display: flex;
   align-items: center;
@@ -34,8 +42,10 @@ form {
 
 .main-header__nav {
   height: 100%;
-  display: none;
+  width: 100%;
+  display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 
 .main-header__item-list {
@@ -50,14 +60,21 @@ form {
   padding: 0;
 }
 
-.main-header__item a {
+.main-header__item a,
+.main-header__item button {
+  font: inherit;
+  background: transparent;
+  border: none;
   text-decoration: none;
   color: white;
+  cursor: pointer;
 }
 
 .main-header__item a:hover,
 .main-header__item a:active,
-.main-header__item a.active {
+.main-header__item a.active,
+.main-header__item button:hover,
+.main-header__item button:active {
   color: #ffeb3b;
 }
 
@@ -102,7 +119,7 @@ form {
 .mobile-nav__item a:active,
 .mobile-nav__item a:hover,
 .mobile-nav__item a.active {
-  background: rgb(19, 0, 105);
+  background: #00695c;
   color: white;
   border-radius: 3px;
 }
@@ -184,8 +201,8 @@ form {
   padding: 0.25rem 1rem;
   text-decoration: none;
   font: inherit;
-  border: 1px solid rgb(19, 0, 105);
-  color: rgb(19, 0, 105);
+  border: 1px solid #00695c;
+  color: #00695c;
   background: white;
   border-radius: 3px;
   cursor: pointer;
@@ -193,7 +210,18 @@ form {
 
 .btn:hover,
 .btn:active {
-  background-color: rgb(19, 0, 105);
+  background-color: #00695c;
+  color: white;
+}
+
+.btn.danger {
+  color: red;
+  border-color: red;
+}
+
+.btn.danger:hover,
+.btn.danger:active {
+  background: red;
   color: white;
 }
 
