--- a/public/css/main.css
+++ b/public/css/main.css
@@ -34,7 +34,7 @@ form {
 .main-header {
   width: 100%;
   height: 3.5rem;
-  background-color: #00695c;
+  background-color: #0a0069;
   padding: 0 1.5rem;
   display: flex;
   align-items: center;
@@ -119,7 +119,7 @@ form {
 .mobile-nav__item a:active,
 .mobile-nav__item a:hover,
 .mobile-nav__item a.active {
-  background: #00695c;
+  background: #0a0069;
   color: white;
   border-radius: 3px;
 }
@@ -201,8 +201,8 @@ form {
   padding: 0.25rem 1rem;
   text-decoration: none;
   font: inherit;
-  border: 1px solid #00695c;
-  color: #00695c;
+  border: 1px solid #0a0069;
+  color: #0a0069;
   background: white;
   border-radius: 3px;
   cursor: pointer;
@@ -210,7 +210,7 @@ form {
 
 .btn:hover,
 .btn:active {
-  background-color: #00695c;
+  background-color: #0a0069;
   color: white;
 }
 
